src/css/custom.css
/**
 * Any CSS included here will be global. The classic template
 * bundles Infima by default. Infima is a CSS framework designed to
 * work well for content-centric websites.
 */

/* You can override the default Infima variables here. */

@import url('https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;700&display=swap');

:root {
  --ifm-color-primary: #ff8114;
  --ifm-color-primary-dark: #ea6b00;
  --ifm-color-primary-darker: #ce5d00;
  --ifm-color-primary-darkest: #ac4c00;
  --ifm-color-primary-light: #ff9e51;
  --ifm-color-primary-lighter: #ffc79e;
  --ifm-color-primary-lightest: #ffdec9;
  --ifm-code-font-size: 95%;
  --ifm-navbar-background-color: #0e1f3b;
  --ifm-footer-background-color: #142d57;
  --ifm-font-family-base: 'Inter', system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans, sans-serif,
    BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
    'Segoe UI Symbol';
  --ifm-heading-font-family: 'Inter', system-ui, -apple-system, Segoe UI, Roboto, Ubuntu, Cantarell, Noto Sans,
    sans-serif, BlinkMacSystemFont, 'Segoe UI', Helvetica, Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji',
    'Segoe UI Symbol';
  --doc-sidebar-width: 350px;
  letter-spacing: -0.02rem;
  --ifm-h1-font-size: 1.875rem;
  --ifm-navbar-link-color: var(--ifm-color-primary-lightest);
  --ifm-font-size-base: 100%;
  --ifm-menu-link-padding-horizontal: 1rem;
  --ifm-menu-link-padding-vertical: 0.5rem;
}

h1,
.markdown h1:first-child {
  --ifm-h1-font-size: 1.875rem;
  letter-spacing: -0.04rem;
}

label {
  user-select: none;
}

.docusaurus-highlight-code-line {
  background-color: rgba(0, 0, 0, 0.1);
  display: block;
  margin: 0 calc(-1 * var(--ifm-pre-padding));
  padding: 0 var(--ifm-pre-padding);
}

html[data-theme='dark'] .docusaurus-highlight-code-line {
  background-color: rgba(0, 0, 0, 0.3);
}

.menu__link,
.menu__caret {
  border-radius: 0.5rem;
}

.theme-doc-sidebar-item-link.theme-doc-sidebar-item-link-level-1.menu__list-item {
  margin-left: 1rem;
}

.section-title.theme-doc-sidebar-item-category-level-1 .menu__list-item-collapsible {
  text-transform: uppercase;
  font-size: 0.75rem;
  margin: 24px auto 8px 1rem;
  letter-spacing: 0.05rem;
  color: var(--ifm-font-color-base);
}

.theme-doc-sidebar-item-category-level-2 .menu__list-item-collapsible {
  text-transform: none !important;
  font-size: 0.875rem !important;
  margin: 0px auto 0 0 !important;
  letter-spacing: 0rem !important;
  color: var(--ifm-font-color-base);
}

.section-title .menu__list-item-collapsible:hover {
  background: none;
}

.menu__list-item {
  font-size: 0.875rem;
  margin: 0px auto 0px 0;
}

.theme-doc-sidebar-item-link.theme-doc-sidebar-item-link-level-3 a {
  color: #666;
}

.theme-doc-sidebar-item-category.theme-doc-sidebar-item-category-level-2 ul.menu__list {
  border-left: 1px solid #ccc;
  padding-left: 0px;
  margin-left: 16px;
  margin-bottom: 24px;
}

.theme-doc-sidebar-item-link.theme-doc-sidebar-item-link-level-3.menu__list-item a.menu__link {
  border-bottom-left-radius: 0;
  border-top-left-radius: 0;
}

.navbar__logo {
  height: 1.6rem;
}

.menu__link {
  line-height: 1.38;
  color: var(--ifm-font-color-base);
}

.section-title .menu__list-item-collapsible .menu__link {
  line-height: 1.5;
  color: var(--ifm-color-primary-dark);
}

.theme-doc-sidebar-item-category .theme-doc-sidebar-item-category-level-2 .menu__list-item-collapsible .menu__link {
  line-height: 1.38;
  color: var(--ifm-font-color-base);
}

.navbar__items--right .navbar__link {
  color: #ccc;
}

.content-ref-card {
  padding: 16px 24px;
  position: relative;
  display: flex;
  flex-direction: row;
  justify-content: left;
  align-items: center;
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
  margin-bottom: 36px;
  vertical-align: middle;
  font-weight: 700;
  border-radius: 5px;
  transition: all 0.3s ease-in-out;
}

.content-ref-card:hover {
  text-decoration: none;
}

.content-ref-card::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  z-index: -1;
  width: 100%;
  height: 100%;
  opacity: 0;
  border-radius: 5px;
  box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
  transition: opacity 0.3s ease-in-out;
}

.content-ref-card:hover::after {
  opacity: 1;
}

.content-ref-card .file-icon {
  max-width: 48px;
  margin-right: 16px;
}

/* oembed */
iframe[src*='youtube.com'] {
  width: 600px !important;
  height: 338px !important;
  margin-bottom: 2rem;
}

@media (max-width: 550px) {
  iframe[src*='youtube.com'] {
    width: 300px !important;
    height: 170px !important;
  }
}

/* Link Card */
.rlc-container {
  width: 100%;
  max-width: 800px;
  max-height: 120px;
  margin: 0 auto 2rem 0;

  color: black;
  text-decoration: none;

  border-radius: 0.25rem;
  display: flex;
  align-items: stretch;

  transition: background 200ms ease-in-out 0s, box-shadow 200ms ease-in-out 0s;
  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.15);
  background-color: var(--ifm-card-background-color);
}

.rlc-container:hover {
  background-color: var(--ifm-card-background-color);
  box-shadow: 0 4px 5px 2px rgba(80, 80, 80, 0.2);
  color: inherit;
  text-decoration: none;
}

.rlc-info {
  overflow: hidden;
  padding: 1rem 0.5rem 1rem 1.25rem;
  flex: 4 1 100px;
  text-align: left;
  display: flex;
  flex-direction: column;
  font-size: 0.75rem;
}

.rlc-title {
  font-size: 1rem;
  white-space: nowrap;
  overflow: hidden;
  text-overflow: ellipsis;
  margin-bottom: 4px;
  font-weight: 500;
}

.rlc-description {
  font-size: 0.875rem;
  color: #333;
  overflow: hidden;
  line-height: 1rem;
  height: 2rem;
}

.rlc-url-container {
  display: flex;
  align-items: center;
  margin-top: 8px;
}

.rlc-favicon {
  margin-right: 4px;
  width: 16px;
  height: 16px;
}

.rlc-url {
  font-size: 0.75rem;
  text-overflow: ellipsis;
  white-space: nowrap;
  overflow: hidden;
  color: var(--ifm-link-color);
}

.rlc-url:hover {
  color: var(--ifm-link-hover-color);
}

.rlc-image-container {
  position: relative;
  flex: 1 1 54px;
}

.rlc-image {
  object-fit: contain;
  width: 100%;
  height: 100%;
  border-bottom-right-radius: 0.25rem;
  border-top-right-radius: 0.25rem;
}

.footer {
  background-color: #142d57;
}

.navbar__toggle {
  color: #ffffff;
}

.navbar-sidebar {
  background-color: var(--ifm-background-surface-color);
}

.navbar-sidebar__brand {
  background-color: var(--ifm-navbar-background-color);
}

html[data-theme='dark'] .rlc-container {
  color: white;
}

html[data-theme='dark'] .rlc-description {
  color: #aaa;
}

.intro-visual {
  padding: 3rem 2rem 1rem 2rem;
  background-color: rgba(255, 164, 99, 0.3);
  border: 1px solid var(--ifm-color-primary-light);
  border-radius: 7px;
  margin-bottom: 4rem;
}

.intro-visual h5 {
  font-size: var(--ifm-h3-font-size);
  margin-bottom: 0.25rem;
  margin-top: 3rem;
}

/* html[data-theme='dark'] .intro-visual {
  background-color: var(--ifm-color-primary-darkest);
} */

div.module-guides {
  display: grid;
  grid-template-columns: 1fr 1fr;
  gap: 16px;
}

div.module-guides a {
  color: var(--ifm-heading-color);
  border-radius: 7px;
  border: 1px solid rgba(0, 0, 0, 0.2);
  padding: 1rem;
}

div.module-guides a h5 {
  margin-bottom: 0;
  font-size: 16px;
  font-weight: 600;
}

div.module-guides span {
  font-size: 14px;
}

div.quick-start-guides a.ios>svg path {
  fill: black;
}

div.quick-start-guides {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr 1fr;
  gap: 16px;
}

div.quick-start-guides a {
  border-radius: 7px;
  border: 1px solid rgba(0, 0, 0, 0.2);
  text-align: center;
  padding: 1rem 0.6rem;
  display: block;
  color: var(--ifm-heading-color);
}

div.quick-start-guides a h5 {
  font-size: 18px;
  line-height: 1;
  display: block;
  margin-bottom: 0.25rem;
  margin-top: 1rem;
}

div.quick-start-guides a span {
  font-size: 14px;
  line-height: 1.25;
  display: inline-block;
}

div.community {
  display: grid;
  grid-template-columns: 1fr 1fr 1fr;
  gap: 16px;
}

div.community a {
  border-radius: 7px;
  border: 1px solid rgba(0, 0, 0, 0.2);
  text-align: center;
  padding: 1rem 0.6rem;
  display: block;
  color: var(--ifm-heading-color);
}

div.community a img {
  display: block;
  margin-top: 1rem;
  margin-left: auto;
  margin-right: auto;
  max-height: 40px;
}

div.community a.twitter svg {
  display: block;
  margin-bottom: 0.25rem;
  margin-top: 1rem;
  margin-left: auto;
  margin-right: auto;
  max-height: 40px;
}

div.community a h5 {
  font-size: 18px;
  line-height: 1;
  display: block;
  margin-bottom: 0.25rem;
  margin-top: 2rem;
}

div.community a span {
  font-size: 14px;
  line-height: 1.25;
  display: inline-block;
}

html[data-theme='dark'] div.community a,
html[data-theme='dark'] div.quick-start-guides a,
html[data-theme='dark'] div.module-guides a {
  border: 2px solid rgba(255, 255, 255, 0.1)
} 

@media (min-width: 997px) {
  [class^='docSidebarContainer'] {
    border-right: none !important;
  }

  [class*='docItemCol'] {
    padding: 0 1rem 0 4rem !important;
  }

  .padding-top--md {
    padding-top: 2.5rem !important;
  }
}

@media screen and (max-width: 966px) {
  div.quick-start-guides {
    display: grid;
    grid-template-columns: 1fr 1fr;
  }

  div.module-guides {
    display: grid;
    grid-template-columns: 1fr;
  }
}

